--- a/hr_information-spa/src/style/app.module.css
+++ b/hr_information-spa/src/style/app.module.css
@@ -44,8 +44,8 @@
 /* 카드 */
 .card {
   margin: 20px 10px;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 25px;
   transform-style: preserve-3d;
   transform-origin: center right;
@@ -56,6 +56,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 70px;
+  font-weight: 700;
 }
 
 /* 적용 안됨
